--- a/plugins/dynamix.vm.manager/styles/dynamix.vm.manager.css
+++ b/plugins/dynamix.vm.manager/styles/dynamix.vm.manager.css
@@ -35,7 +35,7 @@ textarea {
   border: 1px solid transparent;
   white-space: nowrap;
   padding: 6px 12px;
-  font-size: 13px;
+  font-size: 1.3rem;
   line-height: 1.42857143;
   border-radius: 4px;
   -webkit-user-select: none;
@@ -395,14 +395,14 @@ fieldset[disabled] .btn-link:focus {
 .btn-lg,
 .btn-group-lg > .btn {
   padding: 10px 16px;
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 1.33;
   border-radius: 6px;
 }
 .btn-sm,
 .btn-group-sm > .btn {
   padding: 5px 10px;
-  font-size: 11px;
+  font-size: 1.1rem;
   line-height: 1.5;
   border-radius: 3px;
   min-width: 13px;
@@ -410,7 +410,7 @@ fieldset[disabled] .btn-link:focus {
 .btn-xs,
 .btn-group-xs > .btn {
   padding: 1px 5px;
-  font-size: 11px;
+  font-size: 1.1rem;
   line-height: 1.5;
   border-radius: 3px;
 }
@@ -663,7 +663,7 @@ table.tablesorter.domsnap td:last-child{width:96px;padding:0;}
   z-index: 2;
   bottom: -4px;
   right: -4px;
-  font-size: 1.3em;
+  font-size: 1.4rem;
   text-shadow: 0 0 2px #FFF;
 }
 img.started{opacity: 1.0;}
