--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -12,7 +12,7 @@ a{color:#486dba;text-decoration:none}
 a.none{color:#606e7f}
 a.img{text-decoration:none;border:none}
 a.info{position:relative}
-a.info span{display:none;white-space:nowrap;font-variant:small-caps;position:absolute;top:16px;left:12px;color:#4f4f4f;font-size:1.2rem;line-height:20px;padding:5px 8px;border:1px solid #42453e;border-radius:3px;background-color:#edeaef}
+a.info span{display:none;white-space:nowrap;font-variant:small-caps;position:absolute;top:16px;left:12px;color:#4f4f4f;font-size:1.2rem;line-height:2rem;padding:5px 8px;border:1px solid #42453e;border-radius:3px;background-color:#edeaef}
 a.info:hover span{display:block;z-index:1}
 a.nohand{cursor:default}
 i.spacing{margin-left:0;margin-right:10px}
@@ -22,7 +22,7 @@ pre ul{margin:0;padding-top:0;padding-bottom:0;padding-left:28px}
 pre li{margin:0;padding-top:0;padding-bottom:0;padding-left:18px}
 big{font-size:1.4rem;font-weight:bold;text-transform:uppercase}
 hr{border:none;height:1px!important;color:#606e7f;background-color:#606e7f}
-input[type=text],input[type=password],input[type=number],input[type=url],input[type=email],input[type=date],input[type=file],textarea,.textarea{font-family:clear-sans;font-size:1.3rem;background:transparent;border:1px solid #606e7f;padding:5px 10px;min-height:20px;line-height:20px;outline:none;width:304px;margin:0 20px 0 0;box-shadow:none;color:#606e7f}
+input[type=text],input[type=password],input[type=number],input[type=url],input[type=email],input[type=date],input[type=file],textarea,.textarea{font-family:clear-sans;font-size:1.3rem;background:transparent;border:1px solid #606e7f;padding:5px 10px;min-height:2rem;line-height:2rem;outline:none;width:304px;margin:0 20px 0 0;box-shadow:none;color:#606e7f}
 input[type=button],input[type=reset],input[type=submit],button,button[type=button],a.button{font-family:clear-sans;font-size:1.2rem;border:1px solid #9F9180;border-radius:5px;margin:10px 20px 10px 0;padding:8px 12px;cursor:pointer;outline:none;color:#9F9180;background:#edeaef}
 input[type=checkbox]{vertical-align:middle;margin-right:6px}
 input[type=number]::-webkit-outer-spin-button,input[type=number]::-webkit-inner-spin-button{-webkit-appearance:none}
@@ -40,7 +40,7 @@ select[name=enter_view]{padding:0;float:right}
 select[name=enter_share]{padding:0;float:right}
 select.narrow{min-width:87px}
 select.auto{min-width:auto}
-select.slot{min-width:440px;max-width:440px}
+select.slot{min-width:44rem;max-width:44rem}
 input.narrow{width:166px}
 input.trim{width:50px}
 form+p{display:none}
@@ -81,7 +81,7 @@ span.tub span[id^='txt-tub']{margin-top:7px}
 #title:first-child{margin-top:0}
 #title.shift{margin-top:-12px}
 #clear{clear:both}
-#footer{position:fixed;bottom:0;left:0;color:#808080;background:#121510;padding:5px 0;width:100%;height:16px;line-height:16px;text-align:center;z-index:100}
+#footer{position:fixed;bottom:0;left:0;color:#808080;background:#121510;padding:5px 0;width:100%;height:1.6rem;line-height:1.6rem;text-align:center;z-index:100}
 #statusraid{float:left;padding-left:10px}
 #countdown{margin:0 auto}
 #copyright{font-family:bitstream;font-size:1.1rem;float:right;padding-right:10px}
@@ -94,17 +94,17 @@ span.tub span[id^='txt-tub']{margin-top:7px}
 .orange-text,.warning{color:#E68A00}
 .blue-text{color:#3B5998}
 .grey-text{color:#606060}
-.usage-bar{position:fixed;top:60px;right:450px;height:22px;line-height:22px;width:140px;background-color:rgba(228,226,228,0.4)}
+.usage-bar{position:fixed;top:60px;right:450px;height:2.2rem;line-height:2.2rem;width:14rem;background-color:rgba(228,226,228,0.4)}
 .usage-bar>span{display:block;height:3px;background-color:#606e7f;text-align:left}
 .usage-bar>span>span{padding-left:4px;color:#606e7f}
-.usage-disk{height:25px;line-height:25px;background-color:rgba(237,234,239,0.4)}
+.usage-disk{height:2.5rem;line-height:2.5rem;background-color:rgba(237,234,239,0.4)}
 .usage-disk>span{display:block;height:3px;background-color:#606e7f;text-align:left}
 .usage-disk>span>span{font-size:1.2rem;color:#606e7f}
 .usage-disk.sys{background-color:transparent}
 .usage-disk.sys>span{font-size:1.2rem}
 .usage-disk.all{background-color:transparent}
 .usage-disk.all>span{font-size:1.1rem}
-.notice{background:#FFF6BF url(../images/notice.png) no-repeat;background-position:60px 50%;font-size:1.4rem;text-align:left;padding:15px 0 15px 130px;display:block;height:70px;line-height:70px;vertical-align:middle;border-top:1px solid #FFD324;border-bottom:1px solid #FFD324}
+.notice{background:#FFF6BF url(../images/notice.png) no-repeat;background-position:60px 50%;font-size:1.4rem;text-align:left;padding:15px 0 15px 130px;display:block;height:7rem;line-height:7rem;vertical-align:middle;border-top:1px solid #FFD324;border-bottom:1px solid #FFD324}
 .greenbar{background:-webkit-radial-gradient(#127A05,#17BF0B);background:linear-gradient(#127A05,#17BF0B)}
 .orangebar{background:-webkit-radial-gradient(#CE7C10,#F0B400);background:linear-gradient(#CE7C10,#F0B400)}
 .redbar{background:-webkit-radial-gradient(#941C00,#DE1100);background:linear-gradient(#941C00,#DE1100)}
@@ -121,18 +121,18 @@ table.disk_status tr>td+td{width:auto}
 table.disk_status tr>td+td+td{width:6.5%;text-align:center;padding-left:4px;padding-right:8px}
 table.disk_status tr>td+td+td+td{text-align:right;padding-left:0;padding-right:12px}
 table.disk_status tr td:last-child{width:4%;padding-right:10px}
-table.disk_status tbody tr{border-bottom:#F3F0F4 1px solid;line-height:24px}
+table.disk_status tbody tr{border-bottom:#F3F0F4 1px solid;line-height:2.4rem}
 table.disk_status.stats tr>td+td{text-align:left;padding-left:0;padding-right:12px}
-table.array_status{line-height:24px}
+table.array_status{line-height:2.4rem}
 table.array_status td{padding:4px 0}
 table.array_status td:first-child{text-transform:uppercase}
 table.array_status tr>td{text-align:left;white-space:nowrap;padding-left:12px;width:30%}
 table.array_status tr>td+td{padding-left:2px;width:20%}
 table.array_status tr>td+td+td{width:auto}
 table.array_status td.line{border-top:1px solid #F3F0F4}
-table.settings{padding-top:8px;line-height:42px}
+table.settings{padding-top:8px;line-height:4.2rem}
 table.settings td:first-child{width:35%;padding-left:12px}
-table.settings tr>td+td{line-height:16px}
+table.settings tr>td+td{line-height:1.6rem}
 table.settings.shifted{padding:0;margin-left:0;margin-top:0}
 table.settings.shifted td:first-child{padding-left:0}
 table.share_status{white-space:nowrap;margin-top:12px}
@@ -141,23 +141,23 @@ table.share_status tr>td{text-align:left;padding-left:12px}
 table.share_status tr>td+td{padding-left:0}
 table.share_status tr.share_status_size>td{padding-left:40px}
 table.share_status tr.share_status_size>td+td{padding-left:15px}
-table.share_status tbody tr{border-bottom:#F3F0F4 1px solid;line-height:24px}
+table.share_status tbody tr{border-bottom:#F3F0F4 1px solid;line-height:2.4rem}
 table.share_status tbody tr:last-child td{border-bottom:#606e7f 1px solid}
 table.share_status tbody tr.alert{color:#F0000C;background-color:#FF9E9E}
 table.share_status tbody tr.warn{color:#E68A00;background-color:#FEEFB3}
 table.share_status.share tr td:last-child{width:4%;text-align:right;padding-right:10px}
 table.share_status.fixed thead tr>td+td{font-size:1.1rem}
-table.share_status.fixed tr td:first-child{width:100px}
-table.share_status.fixed tr>td+td{min-width:30px;text-align:center;padding:0}
+table.share_status.fixed tr td:first-child{width:10rem}
+table.share_status.fixed tr>td+td{min-width:3rem;text-align:center;padding:0}
 table.share_status.fixed tbody tr{border-bottom:1px #F3F0F4 solid}
 table.share_status.fixed tbody tr td:first-child{padding-right:10px}
 table.share_status.table{margin-top:36px}
 table.share_status.table tr>td{width:50%}
 table.share_status.dash{float:left;width:35%;margin-top:36px;margin-right:6px;border:none}
-table.share_status.dash thead tr:first-child td{line-height:24px}
+table.share_status.dash thead tr:first-child td{line-height:2.4rem}
 table.share_status.dash thead tr:last-child>td{border-bottom:1px solid #606e7f;text-align:left;color:#606e7f}
 table.share_status.dash tbody td.blue{color:#606e7f}
-table.share_status.dash.line tbody tr.wide{height:40px;line-height:40px}
+table.share_status.dash.line tbody tr.wide{height:4rem;line-height:4rem}
 table.share_status.dash.line tbody td{padding:3px 4px 3px 10px}
 table.share_status.dash.line tr>td{width:25%}
 table.share_status.dash.line tr>td[colspan='2']{width:50%}
@@ -209,7 +209,7 @@ span.two{margin-left:-20px}
 span.three{margin-left:-23px}
 span.tub{margin-right:8px;font-size:2.4rem;cursor:pointer}
 span.score{font-size:1.1rem;color:#FFFFFF;position:absolute}
-span#dropbox{background:none;line-height:60px;margin-right:20px}
+span#dropbox{background:none;line-height:6rem;margin-right:20px}
 i.padlock{margin-right:8px;cursor:default}
 i.nolock{visibility:hidden;margin-right:8px}
 i.lock{margin-left:8px;cursor:default}
@@ -234,12 +234,12 @@ div.Panel br,.vmtemplate br{display:none}
 div.Panel img.PanelImg{float:left;width:auto;max-width:32px;height:32px;margin:10px}
 div.Panel i.PanelIcon{float:left;font-size:3.2rem;margin:10px}
 div.Panel .PanelText{font-size:1.4rem;padding-top:16px;text-align:center}
-div.user-list{float:left;padding:10px;margin-right:10px;margin-bottom:24px;border:1px solid #F3F0F4;border-radius:5px;line-height:20px;height:100px;width:100px}
+div.user-list{float:left;padding:10px;margin-right:10px;margin-bottom:24px;border:1px solid #F3F0F4;border-radius:5px;line-height:2rem;height:10rem;width:10rem}
 div.user-list img{width:auto;max-width:48px;height:48px;margin-bottom:16px}
 div.user-list:hover{background-color:#edeaef}
 div.vmheader{display:block;clear:both}
 div.vmtemplate:hover{background-color:#edeaef}
-div.vmtemplate{height:120px;width:120px;border:1px solid #F3F0F4}
+div.vmtemplate{height:12rem;width:12rem;border:1px solid #F3F0F4}
 div.vmtemplate img{margin-top:20px}
 div.up{margin-top:-20px;border:1px solid #F3F0F4;padding:4px 6px;overflow:auto}
 div.spinner{margin:48px auto;text-align:center}
@@ -255,8 +255,8 @@ div.spinner .unraid_mark_7{animation:mark_7 1.5s ease infinite}
 @keyframes mark_7{50% {transform:translateY(62px)} 100% {transform: translateY(0px)}}
 pre.up{margin-top:0}
 pre{border:1px solid #F3F0F4;font-family:bitstream;font-size:1.2rem;padding:0;overflow:auto;margin-bottom:10px;padding:10px}
-iframe#progressFrame{position:fixed;bottom:32px;left:60px;margin:0;padding:8px 8px 0 8px;width:100%;height:12px;line-height:12px;border-style:none;overflow:hidden;font-family:bitstream;font-size:1.1rem;color:#808080;white-space:nowrap;z-index:-2}
-dl{margin-top:0;padding-left:12px;line-height:26px}
+iframe#progressFrame{position:fixed;bottom:32px;left:60px;margin:0;padding:8px 8px 0 8px;width:100%;height:1.2rem;line-height:1.2rem;border-style:none;overflow:hidden;font-family:bitstream;font-size:1.1rem;color:#808080;white-space:nowrap;z-index:-2}
+dl{margin-top:0;padding-left:12px;line-height:2.6rem}
 dt{clear:left;float:left;width:35%}
 dd{margin-bottom:12px;white-space:nowrap}
 dd p{margin:0 0 4px 0}
