Black and White theme: simplified input & select boxes

--- a/plugins/dynamix/styles/dynamix-black.css
+++ b/plugins/dynamix/styles/dynamix-black.css
@@ -16,12 +16,12 @@ div.jGrowl div.jGrowl-closer{width:400px;color:#808080;background-color:#121510;
 div.jGrowl div.jGrowl-closer.top{position:fixed;top:130px}
 @media print{div.jGrowl{display:none}}
 .ui-dropdownchecklist{background:transparent;border:none;box-shadow:0 1px 0 #f2f2f2;outline:none;height:3.2rem;line-height:3.2rem;cursor:pointer}
-.ui-dropdownchecklist-selector{border:1px solid #f2f2f2;display:inline-block;cursor:pointer;padding:1px 9px 1px 11px}
-.ui-dropdownchecklist-group{font-weight:normal;font-style:italic;padding:1px 9px 1px 11px}
+.ui-dropdownchecklist-selector{border:none;border-bottom:1px solid #f2f2f2;display:inline-block;cursor:pointer;padding:1px 3px}
+.ui-dropdownchecklist-group{font-weight:normal;font-style:italic;padding:1px 3px}
 .ui-dropdownchecklist-selector-wrapper{vertical-align:middle;font-size:0}
-.ui-state-active{border-color:#ff8c2f;background:transparent}
-.ui-dropdownchecklist-dropcontainer{color:#f2f2f2;background-color:#262626;border:#ff8c2f 1px solid}
-.ui-state-disabled{color:#f2f2f2;border-color:#6c6c6c;background:#262626;opacity:0.5;cursor:default}
+.ui-state-active{background:transparent}
+.ui-dropdownchecklist-dropcontainer{color:#f2f2f2;background-color:#262626}
+.ui-state-disabled{color:#f2f2f2;border-bottom-coloer:#6c6c6c;opacity:0.5;cursor:default}
 .ui-dropdownchecklist-indent{padding-left:7px}
 .ui-dropdownchecklist-text{font-family:clear-sans;font-size:1.3rem;color:#f2f2f2}
 .ui-dropdownchecklist-item{height:2.4rem;line-height:2.4rem}
