--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -44,7 +44,7 @@ select.auto{min-width:auto}
 select.slot{min-width:44rem;max-width:44rem}
 input.narrow{width:166px}
 input.trim{width:50px}
-#header{position:fixed;top:0;left:0;width:100%;height:91px;z-index:100;margin:0;color:#f2f2f2;background:#1c1b1b;background-size:100% 90px;background-repeat:no-repeat}
+#header{position:absolute;top:0;left:0;width:100%;height:91px;z-index:100;margin:0;color:#f2f2f2;background:#1c1b1b;background-size:100% 90px;background-repeat:no-repeat}
 #header .logo{float:left;margin-left:10px;color:#e22828;width:160px;text-align:center}
 #header .logo svg{width:160px;display:block;margin:25px 50px 8px 0}
 #header .block{margin:0;float:right;text-align:right;background-color:rgba(28,27,27,0.3);padding:10px 12px}
@@ -57,7 +57,7 @@ input.trim{width:50px}
 #title span.right{font-size:1.4rem;padding-top:2px;padding-right:10px;float:right}
 #title span img{padding-right:4px}
 #title.shift{margin-top:-30px}
-#menu{position:fixed;top:90px;left:0;width:100%;height:4rem;line-height:4rem;padding:0;margin:0;font-size:1.2rem;background:#1c1b1b;z-index:101}
+#menu{position:absolute;top:90px;left:0;width:100%;height:4rem;line-height:4rem;padding:0;margin:0;font-size:1.2rem;background:#1c1b1b;z-index:101}
 #nav-block{overflow:hidden;height:4rem;letter-spacing:2px}
 #nav-left{float:left}
 #nav-right{float:right}
