--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -25,7 +25,7 @@ input[type=button],input[type=reset],input[type=submit],button,button[type=butto
 input[type=checkbox]{vertical-align:middle;margin-right:6px}
 input[type=number]::-webkit-outer-spin-button,input[type=number]::-webkit-inner-spin-button{-webkit-appearance: none}
 input[type=number]{-moz-appearance:textfield}
-input:focus[type=text],input:focus[type=password],input:focus[type=number],input:focus[type=url],input:focus[type=email],input:focus[type=file],textarea:focus{background:#e8e8e8}
+input:focus[type=text],input:focus[type=password],input:focus[type=number],input:focus[type=url],input:focus[type=email],input:focus[type=file],textarea:focus{background:#e8e8e8;outline:0}
 input:hover[type=button],input:hover[type=reset],input:hover[type=submit],button:hover,button:hover[type=button],a.button:hover{color:#f2f2f2;background:-webkit-gradient(linear,left top,right top,from(#e22828),to(#ff8c2f));background:linear-gradient(90deg,#e22828 0,#ff8c2f)}
 input[disabled],textarea[disabled]{color:#1c1c1c;border-bottom-color:#a2a2a2;opacity:0.5;cursor:default}
 input[type=button][disabled],input[type=reset][disabled],input[type=submit][disabled],button[disabled],button[type=button][disabled],a.button[disabled]
@@ -35,7 +35,7 @@ input:active[type=button][disabled],input:active[type=reset][disabled],input:act
 input::-webkit-input-placeholder{color:#486dba}
 select{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-webkit-appearance:none;-moz-appearance:none;font-family:clear-sans;font-size:1.3rem;min-width:172px;max-width:310px;padding:6px 0;margin:0 10px 0 0;border:none;border-bottom:#1c1c1c 1px solid;box-shadow:none;border-radius:0;color:#1c1c1c;background:transparent;outline:none;display:inline-block;cursor:pointer}
 select option{color:#1c1c1c;background-color:#e8e8e8}
-select:focus{}
+select:focus{outline:0}
 select[disabled]{color:#1c1c1c;border-bottom-color:#a2a2a2;opacity:0.5;cursor:default}
 select[name=enter_view]{padding:0;float:right}
 select[name=enter_share]{padding:0;float:right}
