--- a/plugins/dynamix/styles/dynamix-white.css
+++ b/plugins/dynamix/styles/dynamix-white.css
@@ -16,7 +16,7 @@ div.jGrowl div.jGrowl-closer{width:400px;color:#808080;background-color:#121510;
 div.jGrowl div.jGrowl-closer.top{position:fixed;top:130px}
 @media print{div.jGrowl{display:none}}
 .ui-dropdownchecklist{background:transparent;border:none;box-shadow:0 1px 0 #1c1c1c;outline:none;height:3.2rem;line-height:3.2rem;cursor:pointer}
-.ui-dropdownchecklist-selector{border:none;border-bottom:1px solid #1c1c1c;display:inline-block;cursor:pointer;padding:1px 0}
+.ui-dropdownchecklist-selector{border:none;border-bottom:1px solid #1c1c1c;outline:none;display:inline-block;cursor:pointer;padding:1px 0}
 .ui-dropdownchecklist-group{font-weight:normal;font-style:italic;padding:1px 0}
 .ui-dropdownchecklist-selector-wrapper{vertical-align:middle;font-size:0}
 .ui-state-active{background:transparent}
