--- a/plugins/dynamix.vm.manager/VMMachines.page
+++ b/plugins/dynamix.vm.manager/VMMachines.page
@@ -1,7 +1,7 @@
 Menu="VMs:1"
 Title="Virtual Machines"
 Tag="columns"
-Cond="(pgrep('libvirtd')!==false)"
+Cond="is_file('/var/run/libvirt/libvirtd.pid')"
 Markdown="false"
 ---
 <?PHP
